# openshorts

./: .dockerignore  .env.cloud.example  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  HANDOFF.md  LICENSE  README.en.md  README.md  ROADMAP.md  alembic.ini  app.py  clip_selection.py  design.md  docker-compose.cloud.yml  docker-compose.e2e.local.yml  docker-compose.yml  editor.py  ffmpeg_utils.py  gemini_worker.py  hooks.py  main.py  music_providers.py  opencode.json  package-lock.json  package.json  pyproject.toml  quality_probe.py  reframe_v2.py  requirements-billing.txt  requirements.txt  run.bat  s3_uploader.py  saasshorts.py  start.bat  (+9 more)
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.hallmark/: log.json
.kilo/: kilo.json
.opencode/: codebase-index.json
_bmad/: config.toml  config.user.toml
alembic/: env.py
backend/: Dockerfile  pyproject.toml  requirements-dev.txt
cloud/: __init__.py  alerts.py  auth.py  billing.py  config.py  database.py  emails.py  managed_keys.py  metering.py  models.py  oauth.py  social_profiles.py  storage.py  videos.py
dashboard/: .gitignore  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/: package-lock.json  package.json  tailwind.config.js
learning/: __init__.py  config.py  embedder.py  example_builder.py  models.py  profile_manager.py  rag_injector.py  routes.py  vector_store.py
openshorts/: __init__.py
scripts/: install_hooks.sh  (+1 more)
(+226 files in other folders)
