[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openshorts"
version = "0.1.0"
description = "AI vertical short-video generator"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["."]
include = ["openshorts*"]
exclude = ["tests*", "dashboard*", "remotion*", "render-service*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "e2e: end-to-end smoke test that needs real ffmpeg and a fixture video",
    "api: API contract tests via FastAPI TestClient",
    "unit: pure-Python unit tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
